refactor: clean up lint warnings in the .nl formatter